<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <android.support.v7.widget.CardView xmlns:cardView="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cardView:cardBackgroundColor="@color/yellow"
            cardView:cardElevation="3dp"
            cardView:cardUseCompatPadding="true">

            <Button
                android:id="@+id/bSpotify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/yellow"
                android:text="@string/spotify_streamer" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:cardView="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:padding="@dimen/default_padding"
            cardView:cardBackgroundColor="@color/yellow"
            cardView:cardElevation="3dp"
            cardView:cardUseCompatPadding="true">

            <Button
                android:id="@+id/bScoresApp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/yellow"
                android:text="@string/scores_app" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:cardView="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:padding="@dimen/default_padding"
            cardView:cardBackgroundColor="@color/yellow"
            cardView:cardElevation="3dp"
            cardView:cardUseCompatPadding="true">

            <Button
                android:id="@+id/bLibraryApp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/yellow"
                android:text="@string/library_app" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:cardView="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:padding="@dimen/default_padding"
            cardView:cardBackgroundColor="@color/yellow"
            cardView:cardElevation="3dp"
            cardView:cardUseCompatPadding="true">

            <Button
                android:id="@+id/bBuildBigger"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/yellow"
                android:text="@string/buildItBigger" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:cardView="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:padding="@dimen/default_padding"
            cardView:cardBackgroundColor="@color/yellow"
            cardView:cardElevation="3dp"
            cardView:cardUseCompatPadding="true">

            <Button
                android:id="@+id/bXYZReader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/yellow"
                android:text="@string/xyz_reader" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:cardView="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            cardView:cardBackgroundColor="@color/red"
            cardView:cardElevation="3dp"
            cardView:cardUseCompatPadding="true">

            <Button
                android:id="@+id/bCapstone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/red"
                android:text="@string/capstone_my_app"
                android:textColor="@color/white" />

        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>